# satysfi-footnote-scheme-ext

./: .gitignore  README.md  Satyristes  memo.md  satysfi-footnote-scheme-ext.opam
demo/: sample.saty  stdjareport.satyh  watch.sh
src/: footnote-scheme-ext.satyh
